# research-agent-langchain

./: .gitignore  LICENSE  README.md  poetry.toml  pyproject-poetry.toml  pyproject.toml
docker/higress/: docker-compose.yml
docker/higress/conf/: redis.conf
docker/milvus/: docker-compose.yml
docker/mysql/: docker-compose.yml
docker/mysql/conf/: my.cnf
docker/nacos/: docker-compose.yml
docker/pgvector/: docker-compose.yml
docker/pgvector/16/: docker-compose.yml
docker/pgvector/16/postgres16-age/: DockerFile
docs/disign/: README.md  session_manager_design.md
src/agent-ui/: vite.config.js
src/agent-ui/src/: App.vue  main.js
src/agent-ui/src/components/bar/: NavBar.vue
src/agent-ui/src/router/: index.js
src/agent-ui/src/store/: getters.js  index.js
src/agent-ui/src/views/chat/: Chat.vue
src/agent-ui/src/views/login/: Login.vue
src/agent-ui/src/views/login/hooks/: useLogin.ts
src/agent-ui/src/views/test/: Test.vue  TestComponent.vue
src/agent-ui/src/views/upload/: UploadFile.vue
src/agent_server/: main.py
src/agent_server/api/v1/: chat_conversation_routes.py  chat_routes.py  prompt_routes.py  rag_routes.py  upload_routes.py
src/agent_server/app/chat/: chat_conversation_service.py  chat_service.py
src/agent_server/app/llm/: mode_factory.py
src/agent_server/app/memory/: windowed_redis_history.py
src/agent_server/app/rag/text_splitter/: chinese_recursive_text_splitter.py
src/agent_server/app/rag/vector_store/: base.py  vs_pg_service.py  vs_relyt_service.py
src/agent_server/config/: pydantic_settings.py  settings.py
src/agent_server/core/: exceptions.py
src/agent_server/db/: base.py  session.py
src/agent_server/db/models/: __init__.py  base.py  chat_conversation_model.py  chat_message_model.py  knowledge_base_model.py  knowlege_file_model.py  knowlege_metadata_model.py  mixin.py
src/agent_server/db/repository/: base.py  chat_conversation_repository.py
src/agent_server/schemas/: base.py
src/agent_server/schemas/chat/: chat_conversation_schema.py  chat_request.py
src/agent_server/schemas/knowledge/: knowledge_base_schema.py
src/agent_server/utils/: id_util.py  kn_util.py  llm_util.py
src/researchagent-ui/: index.html  vite.config.js
src/researchagent-ui/src/styles/: main.css
src/researchagent-ui/src/views/chat/: Chat.vue  ChatView.vue
src/researchagent-ui/src/views/home/: Index.vue
src/researchagent-ui/src/views/test/: Test.vue
src/researchagent_server/: main.py
src/researchagent_server/api/endpoints/: chat_routes.py  prompt_routes.py
src/researchagent_server/chat/: chat_service.py
src/researchagent_server/config/: pydantic_settings.py  settings.py
src/researchagent_server/entity/: chat_request.py
src/researchagent_server/llm/: mode_factory.py
src/researchagent_server/utils/: log_util.py
src/tests/unit_tests/: base.py
src/tests/unit_tests/chat/: test_chat_model.py
src/tests/unit_tests/db/: session_examples.py  test_session_manager.py
src/tests/unit_tests/rag/: test_vector_store.py
