[project]
name = "research-agent-lang"
version = "0.1.0"
description = "Langchain Chat"
authors = [
    {name = "ivan"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain>=0.0.241",
    "langchain-deepseek>=0.1.3,<0.2.0",
    "uvicorn>=0.35.0",
    "loguru>=0.7.3",
    "memoization>=0.4.0",
    "fastapi>=0.112.2",
    "pydantic>=2.11.7",
    "nltk>=3.9.1",
    "ruamel-yaml"==0.18.14,
]

[project.urls]
repository = "https://github.com/tzarrb/research-agent-lang.git"

[tool.poetry]
package-mode = false

[tool.ruff]
extend-include = ["*.ipynb"]
extend-exclude = [
    "docs/docs/expression_language/why.ipynb"  # TODO: look into why linter errors
]

[tool.ruff.lint.per-file-ignores]
"**/{cookbook,docs}/*" = [
    "E402",  # allow imports to appear anywhere in docs
    "F401",  # allow "imported but unused" example code
    "F811",  # allow re-importing the same module, so that cells can stay independent
    "F841",  # allow assignments to variables that are never read -- it's example code
]

# These files were failing the listed rules at the time ruff was adopted for notebooks.
# Don't require them to change at once, though we should look into them eventually.
"cookbook/gymnasium_agent_simulation.ipynb" = ["F821"]
"docs/docs/integrations/document_loaders/tensorflow_datasets.ipynb" = ["F821"]

[tool.poetry.plugins.dotenv]
ignore = "false"
dotenv = "dotenv:plugin"


# https://python-poetry.org/docs/repositories/
[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"
