[project]
name = "research-agent-lang"
version = "0.1.0"
description = "Python生态下基于LangChain框架的AIGC项目解决方案,快速构建企业级Agent智能体"
authors = [
    {name = "ivan",email = "tzarrb@gamil.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
#  --- 核心依赖 --- 
dependencies = [
    "langchain>=0.3.25",
    "langchain-core>=0.3.68",
    "langchain-community>=0.3.12",
    "langchain-openai>=0.3.12",
    "langchain-deepseek>=0.1.3,<2.0.0",
    "langchain-text-splitters>=0.3.8",
    "langchain-experimental>=0.3.4",
    "langchain-postgres>=0.0.15",
    "langgraph>=0.2.67",
    "langgraph-sdk>=0.1.51",
    "langgraph>=0.2.67",
    "langsmith>=0.4.5",
    "uvicorn>=0.35.0",
    "fastapi>=0.112.2",
    "loguru>=0.7.3",
    "memoization>=0.4.0",
    "pydantic>=2.11.7",
    "nltk>=3.9.1",
    "ruamel-yaml>=0.18.14",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.10",
    "python-multipart>=0.0.20",
    "chardet>=4.0.0",
    "dashscope>=1.24.1",
    "pgvector>=0.2.5",
    "pypdf>=4.2.0",
]

#  --- 可选依赖，例如，用于测试 --- 
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

#  --- 定义命令行工具 --- 
[project.scripts]
agent-cli = "researchagent_server.cli:main"

# --- 项目地址 --- 
[project.urls]
repository = "https://github.com/tzarrb/research-agent-lang.git"


# --- 工具配置 (tool.*) ---
# --- Poetry配置 --- 
[tool.poetry]
package-mode = false

[tool.poetry.plugins.dotenv]
ignore = "false"
dotenv = "dotenv:plugin"

# https://python-poetry.org/docs/repositories/
[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


# --- Ruff配置 --- 
[tool.ruff]
extend-include = ["*.ipynb"]
extend-exclude = [
    "docs/docs/expression_language/why.ipynb"  # TODO: look into why linter errors
]

[tool.ruff.lint.per-file-ignores]
"**/{cookbook,docs}/*" = [
    "E402",  # allow imports to appear anywhere in docs
    "F401",  # allow "imported but unused" example code
    "F811",  # allow re-importing the same module, so that cells can stay independent
    "F841",  # allow assignments to variables that are never read -- it's example code
]

# These files were failing the listed rules at the time ruff was adopted for notebooks.
# Don't require them to change at once, though we should look into them eventually.
"cookbook/gymnasium_agent_simulation.ipynb" = ["F821"]
"docs/docs/integrations/document_loaders/tensorflow_datasets.ipynb" = ["F821"]
